fler import-satser för att göra koden mer lättläst, tagit bort case i switchloopen som var dubbelkod.