@@ -1,21 +1,19 @@
 package com.example;
 
 import com.example.api.ElpriserAPI;
-
 import java.time.LocalDate;
-import java.util.Locale;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
+import java.text.*;
 import java.util.regex.Pattern;
 
 public class Main {
-
     public static void main(String[] args) {
         // sätt svensk locale för datum och text
         try {
-            Locale.setDefault(new Locale("sv", "SE"));
-
+            Locale.setDefault(Locale.of("sv", "SE"));
             ElpriserAPI elpriserAPI = new ElpriserAPI();
             ElpriserAPI.Prisklass zon;
-
             LocalDate date = LocalDate.now();
 
             if (args.length == 0) {
@@ -35,9 +33,11 @@ public class Main {
                         System.out.println("Invalid zone");
                         return;
                     }
+
                     zon = ElpriserAPI.Prisklass.valueOf(args[1]);
                     boolean validArgs = true;
 
+                    // loopa igenom resterande argument
                     for (int i = 2; i < args.length; i++) {
                         switch (args[i]) {
                             case "--date" -> {
@@ -54,15 +54,13 @@ public class Main {
                                 if (i + 1 < args.length) {
                                     String duration = args[++i];
                                     if (!duration.equals("2h") && !duration.equals("4h") && !duration.equals("8h")) {
-                                        System.out.println("Invalid charging duration: " + duration);
+                                        System.out.println("Ogiltlig laddtid: " + duration);
                                         validArgs = false;
                                     }
                                 } else {
                                     System.out.println("Missing value for --charging");
                                     validArgs = false;
                                 }
-                            }
-                            case "2h", "4h", "8h" -> {
                             }
                             default -> {
                                 System.out.println("Invalid argument " + args[i]);
@@ -73,21 +71,25 @@ public class Main {
                     }
 
                     if (validArgs) {
-                        System.out.println("Zone: " + zon + ", Date: " + date);
+                        System.out.println("Zon: " + zon + ", Datum: " + date);
+
                         LocalDate tomorrow = date.plusDays(1);
                         var pricesToday = elpriserAPI.getPriser(date, zon);
                         var pricesTomorrow = elpriserAPI.getPriser(tomorrow, zon);
 
-                        var allPricesSet = new java.util.LinkedHashSet<>(pricesToday);
+                        var allPricesSet = new LinkedHashSet<>(pricesToday);
                         allPricesSet.addAll(pricesTomorrow);
-                        var allPrices = new java.util.ArrayList<>(allPricesSet);
+
+                        var allPrices = new ArrayList<>(allPricesSet);
 
                         if (allPrices.isEmpty()) {
                             System.out.println("Inga priser tillgängliga");
                             return;
                         }
 
+                        // beräkna och visa statistik för priser
                         calculateAndDisplayStats(allPrices);
+
                         System.out.println("Alla priser:");
                         displayPrices(allPrices, args);
 
@@ -119,24 +121,30 @@ public class Main {
         }
     }
 
-    private static void calculateAndDisplayStats(java.util.List<ElpriserAPI.Elpris> prices) {
+    // hämta elpriser från API för zon och datum
+    private static void calculateAndDisplayStats(List<ElpriserAPI.Elpris> prices) {
         double mean = prices.stream().mapToDouble(ElpriserAPI.Elpris::sekPerKWh).average().orElse(0);
-        ElpriserAPI.Elpris min = prices.stream().min(java.util.Comparator.comparingDouble(ElpriserAPI.Elpris::sekPerKWh)).get();
-        ElpriserAPI.Elpris max = prices.stream().max(java.util.Comparator.comparingDouble(ElpriserAPI.Elpris::sekPerKWh)).get();
+        ElpriserAPI.Elpris min = prices.stream().min(Comparator.comparingDouble(ElpriserAPI.Elpris::sekPerKWh)).get();
+        ElpriserAPI.Elpris max = prices.stream().max(Comparator.comparingDouble(ElpriserAPI.Elpris::sekPerKWh)).get();
 
         System.out.printf("Medelpris: %.2f öre%n", mean * 100);
-        System.out.printf("Lägsta pris: %.2f öre (%02d-%02d)%n", min.sekPerKWh() * 100, min.timeStart().getHour(), min.timeStart().getHour() + 1);
-        System.out.printf("Högsta pris: %.2f öre (%02d-%02d)%n", max.sekPerKWh() * 100, max.timeStart().getHour(), max.timeStart().getHour() + 1);
+        System.out.printf("Lägsta pris: %.2f öre (%02d-%02d)%n",
+                min.sekPerKWh() * 100,
+                min.timeStart().getHour(),
+                min.timeStart().getHour() + 1);
+        System.out.printf("Högsta pris: %.2f öre (%02d-%02d)%n",
+                max.sekPerKWh() * 100,
+                max.timeStart().getHour(),
+                max.timeStart().getHour() + 1);
     }
 
-    private static void displayPrices(java.util.List<ElpriserAPI.Elpris> prices, String[] args) {
-        boolean sorted = java.util.Arrays.asList(args).contains("--sorted");
-
-        var priceList = sorted ?
-                prices.stream()
-                        .sorted(java.util.Comparator.comparingDouble(ElpriserAPI.Elpris::sekPerKWh))
-                        .toList() :
-                prices;
+    private static void displayPrices(List<ElpriserAPI.Elpris> prices, String[] args) {
+        boolean sorted = Arrays.asList(args).contains("--sorted");
+        var priceList = sorted
+                ? prices.stream()
+                .sorted(Comparator.comparingDouble(ElpriserAPI.Elpris::sekPerKWh))
+                .toList()
+                : prices;
 
         for (var price : priceList) {
             String time = String.format("%02d-%02d",
@@ -148,10 +156,7 @@ public class Main {
     }
 
     // ny metod för charging optimization
-    private static void findBestChargingWindow(
-            java.util.List<ElpriserAPI.Elpris> prices,
-            int hours
-    ) {
+    private static void findBestChargingWindow(List<ElpriserAPI.Elpris> prices, int hours) {
         if (prices.size() < hours) {
             System.out.println("Inte tillräckligt med priser för att beräkna laddning");
             return;
@@ -177,13 +182,11 @@ public class Main {
             var start = prices.get(bestIndex).timeStart();
             var end = prices.get(bestIndex + hours - 1).timeStart().plusHours(1);
 
-            var dfs = new java.text.DecimalFormatSymbols(new Locale("sv", "SE"));
-            var df = new java.text.DecimalFormat("0.00", dfs);
-
+            var dfs = new DecimalFormatSymbols(new Locale("sv", "SE"));
+            var df = new DecimalFormat("0.00", dfs);
             String meanStr = df.format(bestAvg * 100);
 
-            java.time.format.DateTimeFormatter tf = java.time.format.DateTimeFormatter.ofPattern("HH:mm");
-
+            DateTimeFormatter tf = DateTimeFormatter.ofPattern("HH:mm");
             String startStr = start.format(tf);
             String endStr = end.format(tf);
 
@@ -201,4 +204,3 @@ public class Main {
                 "--help");
     }
 }
-// TODO: ändra språk
